--- a/weather-forecast-widget/package.json
+++ b/weather-forecast-widget/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "weather-icons": "https://github.com/erikflowers/weather-icons.git",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
