--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 weather-forecast-widget/.eslintcache
 weather-forecast-widget/yarn.lock
 weather-forecast-widget/cors-anywhere/
+weather-forecast-widget/.eslintcache
